// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link doesnt change inner text styles 1`] = `
<a
  href="http://thetimes.co.uk"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <p>
    Hello
  </p>
</a>
`;

exports[`Link renders correctly 1`] = `
<a
  href="http://thetimes.co.uk"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
/>
`;

exports[`TextLink renders correctly with children 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  onPress={[Function]}
  style={
    Array [
      Object {
        "textDecorationLine": "underline",
      },
      Object {},
    ]
  }
>
  The Times
</Text>
`;

exports[`TextLink renders correctly with multiple styles 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  onPress={[Function]}
  style={
    Array [
      Object {
        "textDecorationLine": "underline",
      },
      Object {
        "backgroundColor": "blue",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  The Times
</Text>
`;

exports[`TextLink renders correctly with specific styles 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  onPress={[Function]}
  style={
    Array [
      Object {
        "textDecorationLine": "underline",
      },
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
>
  The Times
</Text>
`;
